ejercicio de clase

--- a/PC-nav/views/layout.pug
+++ b/PC-nav/views/layout.pug
@@ -18,4 +18,5 @@ html
         script(src="/js/ventanaModal.js") 
         script(src="/js/formulario.js") 
         script(src="/js/codex.js") 
+        script(src="/js/tooltip.js") 
 
